[DSTEW-1580] - Add more dupolication tests